# storage/api-docs/api-docs.json
@@ -326,6 +326,39 @@
                     }
                 ]
             }
+        },
+        "/api/v1/billing/catalog-services-doctor": {
+            "get": {
+                "tags": [
+                    "Billing"
+                ],
+                "summary": "Obtener todos los doctores por ID a facturar",
+                "operationId": "1d3464d2f240220d7a52f52eec19f12e",
+                "parameters": [
+                    {
+                        "name": "service_id",
+                        "in": "query",
+                        "description": "ID del doctor",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Datos obtenido correctamente"
+                    },
+                    "401": {
+                        "description": "No autorizado"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
         }
     },
     "components": {
